--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svg-scroll",
   "version": "0.1.0",
-  "description": "A simple library to create scroll animations easily – no third party libraries required.",
+  "description": "A minimalist library to create scroll animations easily – no third-party libraries required.",
   "main": "svg-scroll.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
